# ranked-doda-2

./: .gitignore  AGENT.md  Makefile  README.md  data.txt  data_parse.py  data_to_duckdb.py  docs.md  export_players.py  impact.py  impact_coeffs_propose.py  impact_info.py  leaderboard.py  leaderboard_personal.py  main.py  main_info.py  main_save.py  match_player_scores.csv  matches.csv  parse_data.py  players.csv  pyproject.toml  rating.py  rating_complex.py  save_table.py
src/: app.py  data_parse.py  data_to_duckdb.py  db.py  export_players.py  impact.py  impact_coeffs_propose.py  leaderboard.py  leaderboard_personal.py  main.py  main_info.py  main_save.py  rating.py  rating_simple25.py  save_table.py
src/duckdb/: __init__.py  dashboard_trends.py  games.py  players.py
src/ranked/: README.md  __init__.py  bradley_terry.py  common.py  trueskill_like.py
src/static/: players.js  theme.css
src/templates/: base.html  dashboard.html  games.html  player.html  players.html
src/templates/partials/: game_cards.html  player_filtered_section.html  player_recent_games_rows.html  players_rows.html  trend_chart.html
