[project]
name = "ranked-doda-2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scipy>=1.16.2",
    "optuna>=4.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "anthropic>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "basedpyright>=1.18.0",
]
